Fixing extra space in footer

--- a/sass/modules/footer.scss
+++ b/sass/modules/footer.scss
@@ -10,13 +10,13 @@ footer {
 		padding: 24px 25px;
 		margin: 0 auto;
 		@include media(tablet) {
-			padding: 36px 22px 120px 32px;
+			padding: 32px 24px;
 		}
 
 
 		.footer__nav {
 			display: block;
-			margin-bottom: 70px;
+			margin-bottom: 0px;
 			padding-right: 80px;
 			position: relative;
 			z-index: 0;
